--- a/src/proj5BeckChanceRemondiSalerno/Views/CompositionPane.fxml
+++ b/src/proj5BeckChanceRemondiSalerno/Views/CompositionPane.fxml
@@ -1,6 +1,7 @@
 <?import javafx.scene.layout.Pane?>
-<Pane  xmlns="http://javafx.com/javafx/8.0.65"
+<Pane xmlns="http://javafx.com/javafx/8.0.65"
        xmlns:fx="http://javafx.com/fxml/1"
+        fx:id="composition"
        fx:controller="proj5BeckChanceRemondiSalerno.Controllers.CompositionController"
        onMousePressed="#handleMousePressed"
        onMouseDragged="#handleMouseDrag"
