--- a/src/proj5BeckChanceRemondiSalerno/Views/Main.css
+++ b/src/proj5BeckChanceRemondiSalerno/Views/Main.css
@@ -22,6 +22,23 @@
     -fx-stroke-dash-array: 3 7 3 7;
 }
 
+.singleNoteGroupablePane{
+    -fx-border-color: transparent;
+    -fx-border-width: 0;
+}
+
+.selectedGroupablePane{
+    -fx-border-color: red;
+     -fx-border-width: 2;
+     -fx-border-style: dashed;
+}
+
+.unselectedGroupablePane{
+    -fx-border-color: black;
+    -fx-border-width: 1;
+    -fx-border-style: dashed;
+}
+
 #fxCompositionSheet {
     -fx-pref-height: 1280.0;
     -fx-pref-width: 2000.0;
