changed javadoc class headers

--- a/src/proj5BeckChanceRemondiSalerno/Views/Main.css
+++ b/src/proj5BeckChanceRemondiSalerno/Views/Main.css
@@ -1,9 +1,9 @@
 /*
- * File: Main.css
+ * File: Controller.java
  * Names: Graham Chance, Charlie Beck, Ryan Salerno, Mike Remondi
  * Class: CS361
- * Project: 4
- * Due Date: October 11, 2016
+ * Project: 6
+ * Due Date: November 1, 2016
  */
 
 .staffLine {
