--- a/src/proj5BeckChanceRemondiSalerno/Views/InstrumentPane.fxml
+++ b/src/proj5BeckChanceRemondiSalerno/Views/InstrumentPane.fxml
@@ -1,3 +1,8 @@
+<!--File: Composition.java
+    Names: Graham Chance, Charlie Beck, Ryan Salerno, Mike Remondi
+    Class: CS361
+    Project: 6
+    Date: November 1, 2016-->
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.Pane?>
 <Pane xmlns="http://javafx.com/javafx/8.0.65"
