--- a/src/proj5BeckChanceRemondiSalerno/Views/InstrumentPane.fxml
+++ b/src/proj5BeckChanceRemondiSalerno/Views/InstrumentPane.fxml
@@ -9,7 +9,7 @@
       xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="proj5BeckChanceRemondiSalerno.Controllers.InstrumentPaneController">
 
-    <RadioButton layoutX="10.0" layoutY="10.0" onAction="#handleInstrumentChange" selected="true" text="Piano"
+    <RadioButton layoutX="10.0" layoutY="10.0" selected="true" text="Piano"
                  textFill="Gray">
         <toggleGroup>
             <ToggleGroup fx:id="instrumentGroup"/>
@@ -18,20 +18,19 @@
     <RadioButton
             layoutX="10.0"
             layoutY="50.0"
-            onAction="#handleInstrumentChange"
             text="Harpsichord"
             textFill="green"
             toggleGroup="$instrumentGroup"/>
-    <RadioButton layoutX="10.0" layoutY="90.0" onAction="#handleInstrumentChange" text="Marimba" textFill="blue"
+    <RadioButton layoutX="10.0" layoutY="90.0"  text="Marimba" textFill="blue"
                  toggleGroup="$instrumentGroup"/>
-    <RadioButton layoutX="10.0" layoutY="130.0" onAction="#handleInstrumentChange" text="Organ"
+    <RadioButton layoutX="10.0" layoutY="130.0"  text="Organ"
                  textFill="goldenrod" toggleGroup="$instrumentGroup"/>
-    <RadioButton layoutX="10.0" layoutY="170.0" onAction="#handleInstrumentChange" text="Accordion"
+    <RadioButton layoutX="10.0" layoutY="170.0"  text="Accordion"
                  textFill="magenta" toggleGroup="$instrumentGroup"/>
-    <RadioButton layoutX="10.0" layoutY="210.0" onAction="#handleInstrumentChange" text="Guitar"
+    <RadioButton layoutX="10.0" layoutY="210.0"  text="Guitar"
                  textFill="deepskyblue" toggleGroup="$instrumentGroup"/>
-    <RadioButton layoutX="10.0" layoutY="250.0" onAction="#handleInstrumentChange" text="Violin"
+    <RadioButton layoutX="10.0" layoutY="250.0"  text="Violin"
                  textFill="black" toggleGroup="$instrumentGroup"/>
-    <RadioButton layoutX="10.0" layoutY="290.0" onAction="#handleInstrumentChange" text="French Horn"
+    <RadioButton layoutX="10.0" layoutY="290.0" text="French Horn"
                  textFill="brown" toggleGroup="$instrumentGroup"/>
 </Pane>
