--- a/src/proj7BeckChanceRemondiSalerno/Views/MenuBar.fxml
+++ b/src/proj7BeckChanceRemondiSalerno/Views/MenuBar.fxml
@@ -9,10 +9,12 @@
          fx:controller="proj7BeckChanceRemondiSalerno.Controllers.MenuBarController">
     <Menu text="File">
         <MenuItem onAction="#handleAbout" text="About"/>
+        <SeparatorMenuItem/>
         <MenuItem accelerator="Shortcut+N" onAction="#handleNew" text="New" fx:id="newItem"/>
         <MenuItem accelerator="Shortcut+S" onAction="#handleSave" text="Save" fx:id="saveItem"/>
         <MenuItem accelerator="Shift+Shortcut+S" onAction="#handleSaveAs" text="Save" fx:id="saveAsItem"/>
         <MenuItem accelerator="Shortcut+O" onAction="#handleOpen" text="Open"/>
+        <SeparatorMenuItem/>
         <MenuItem accelerator="Shortcut+Q" onAction="#handleExit" text="Exit"/>
     </Menu>
     <Menu text="Edit">
