--- a/src/proj8BeckChanceRemondiSalerno/Views/CompositionPane.fxml
+++ b/src/proj8BeckChanceRemondiSalerno/Views/CompositionPane.fxml
@@ -1,8 +1,8 @@
-<!--File: Composition.java
+<!--File: CompositionPane.fxml
     Names: Graham Chance, Charlie Beck, Ryan Salerno, Mike Remondi
     Class: CS361
-    Project: 6
-    Date: November 1, 2016-->
+    Project: 8
+    Date: November 18, 2016-->
 <?import javafx.scene.layout.Pane?>
 <Pane xmlns="http://javafx.com/javafx/8.0.65"
        xmlns:fx="http://javafx.com/fxml/1"
