--- a/src/proj8BeckChanceRemondiSalerno/Views/Main.fxml
+++ b/src/proj8BeckChanceRemondiSalerno/Views/Main.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--File: Composition.java
+<!--File: Main.fxml
     Names: Graham Chance, Charlie Beck, Ryan Salerno, Mike Remondi
     Class: CS361
-    Project: 6
-    Date: November 1, 2016-->
+    Project: 8
+    Date: November 18, 2016-->
 
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
