--- a/src/proj8BeckChanceRemondiSalerno/Views/Main.fxml
+++ b/src/proj8BeckChanceRemondiSalerno/Views/Main.fxml
@@ -6,7 +6,6 @@
     Project: 8
     Date: November 18, 2016-->
 
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.*?>
 <BorderPane prefHeight="300.0" prefWidth="400.0" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="proj8BeckChanceRemondiSalerno.Controllers.Controller">
@@ -14,13 +13,7 @@
         <fx:include source="MenuBar.fxml" BorderPane.alignment="CENTER" fx:id="menuBar"/>
     </top>
     <center>
-        <ScrollPane>
-            <StackPane BorderPane.alignment="CENTER" maxHeight="1270" maxWidth="2000">
-                <Pane fx:id="linePane"/>
-                <fx:include fx:id="composition" source="CompositionPane.fxml"/>
-                <Pane fx:id="tempoLineContainerPane" disable="true" StackPane.alignment="TOP_LEFT"/>
-            </StackPane>
-        </ScrollPane>
+        <fx:include source="CompositionContainer.fxml" fx:id="compositionContainer"/>
     </center>
     <left>
         <fx:include source="InstrumentPane.fxml" fx:id="instrumentPane"/>
