--- a/src/proj8BeckChanceRemondiSalerno/Views/MenuBar.fxml
+++ b/src/proj8BeckChanceRemondiSalerno/Views/MenuBar.fxml
@@ -28,8 +28,8 @@
         <MenuItem accelerator="Shortcut+X" onAction="#handleCut" text="Cut" fx:id="cutItem"/>
         <MenuItem accelerator="Shortcut+V" onAction="#handlePaste" text="Paste" fx:id="pasteItem"/>
         <SeparatorMenuItem/>
-        <MenuItem accelerator="Shortcut+O" onAction="#handleZoomIn" text="Zoom In"/>
-        <MenuItem accelerator="Shortcut+I" onAction="#handleZoomOut" text="Zoom Out"/>
+        <MenuItem accelerator="Shortcut+I" onAction="#handleZoomIn" text="Zoom In"/>
+        <MenuItem accelerator="Shortcut+O" onAction="#handleZoomOut" text="Zoom Out"/>
 
     </Menu>
     <Menu text="Actions">
