--- a/src/proj8BeckChanceRemondiSalerno/Views/CompositionContainer.fxml
+++ b/src/proj8BeckChanceRemondiSalerno/Views/CompositionContainer.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<!--File: CompositionPane.fxml
+    Names: Graham Chance, Charlie Beck, Ryan Salerno, Mike Remondi
+    Class: CS361
+    Project: 9
+    Date: December 7, 2016-->
+
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.Group?>
