--- a/src/proj8BeckChanceRemondiSalerno/Views/Volume.fxml
+++ b/src/proj8BeckChanceRemondiSalerno/Views/Volume.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<!--File: Volume.fxml
+    Names: Graham Chance, Charlie Beck, Ryan Salerno, Mike Remondi
+    Class: CS361
+    Project: 9
+    Date: December 7, 2016-->
+
+
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.Pane?>
