--- a/src/proj8BeckChanceRemondiSalerno/Views/CompositionContainer.fxml
+++ b/src/proj8BeckChanceRemondiSalerno/Views/CompositionContainer.fxml
@@ -6,20 +6,20 @@
     Project: 9
     Date: December 7, 2016-->
 
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.Group?>
-
+<?import javafx.scene.layout.*?>
 <ScrollPane xmlns="http://javafx.com/javafx/8.0.65"
-        xmlns:fx="http://javafx.com/fxml/1"
-        fx:controller="proj8BeckChanceRemondiSalerno.Controllers.CompositionContainerController">
-    <Group >
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="proj8BeckChanceRemondiSalerno.Controllers.CompositionContainerController">
+    <Group>
         <Group fx:id="zoomGroup">
             <StackPane BorderPane.alignment="CENTER" maxHeight="1270" maxWidth="2000">
-            <Pane fx:id="linePane"/>
-            <fx:include  fx:id="composition" source="CompositionPane.fxml"/>
-            <Pane fx:id="tempoLineContainerPane" disable="true" StackPane.alignment="TOP_LEFT"/>
-        </StackPane></Group>
+                <Pane fx:id="linePane"/>
+                <fx:include fx:id="composition" source="CompositionPane.fxml"/>
+                <Pane fx:id="tempoLineContainerPane" disable="true" StackPane.alignment="TOP_LEFT"/>
+            </StackPane>
+        </Group>
 
     </Group>
 
