--- a/src/proj8BeckChanceRemondiSalerno/Views/CompositionContextMenu.fxml
+++ b/src/proj8BeckChanceRemondiSalerno/Views/CompositionContextMenu.fxml
@@ -6,15 +6,13 @@
     Project: 9
     Date: December 7, 2016-->
 
-<?import javafx.scene.control.ContextMenu?>
-<?import javafx.scene.control.MenuItem?>
-
+<?import javafx.scene.control.*?>
 <ContextMenu xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1"
-  fx:controller="proj8BeckChanceRemondiSalerno.Controllers.CompositionContextMenuController">
-  <items>
-    <MenuItem mnemonicParsing="false" text="Delete" onAction="#handleDelete"/>
-      <MenuItem mnemonicParsing="false" text="Play" onAction="#handlePlay"/>
-      <MenuItem mnemonicParsing="false" text="Set Instrument" onAction="#handleSetInstrument"/>
-      <MenuItem mnemonicParsing="false" text="Set Volume" onAction="#handleSetVolume"/>
-  </items>
+             fx:controller="proj8BeckChanceRemondiSalerno.Controllers.CompositionContextMenuController">
+    <items>
+        <MenuItem mnemonicParsing="false" text="Delete" onAction="#handleDelete"/>
+        <MenuItem mnemonicParsing="false" text="Play" onAction="#handlePlay"/>
+        <MenuItem mnemonicParsing="false" text="Set Instrument" onAction="#handleSetInstrument"/>
+        <MenuItem mnemonicParsing="false" text="Set Volume" onAction="#handleSetVolume"/>
+    </items>
 </ContextMenu>
