--- a/src/proj8BeckChanceRemondiSalerno/Views/Main.fxml
+++ b/src/proj8BeckChanceRemondiSalerno/Views/Main.fxml
@@ -6,7 +6,7 @@
     Project: 9
     Date: December 7, 2016-->
 
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.BorderPane?>
 <BorderPane prefHeight="300.0" prefWidth="400.0" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="proj8BeckChanceRemondiSalerno.Controllers.Controller">
     <top>
