First Commit with System stuff

--- a/src/proj9BeckChanceRemondiSalerno/Views/MenuBar.fxml
+++ b/src/proj9BeckChanceRemondiSalerno/Views/MenuBar.fxml
@@ -14,6 +14,7 @@
         <MenuItem accelerator="Shortcut+S" onAction="#handleSave" text="Save" fx:id="saveItem"/>
         <MenuItem accelerator="Shift+Shortcut+S" onAction="#handleSaveAs" text="Save As" fx:id="saveAsItem"/>
         <MenuItem accelerator="Shortcut+O" onAction="#handleOpen" text="Open"/>
+        <MenuItem accelerator="Shortcut+L" onAction="#handleLoadLSystem" text="Load LSystem"/>
         <SeparatorMenuItem/>
         <MenuItem accelerator="Shortcut+Q" onAction="#handleExit" text="Exit"/>
     </Menu>
