--- a/src/proj9BeckChanceRemondiSalerno/Views/LSystemOptions.fxml
+++ b/src/proj9BeckChanceRemondiSalerno/Views/LSystemOptions.fxml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<!--File: LSystemOptions.fxml
+    Names: Graham Chance, Charlie Beck, Ryan Salerno, Mike Remondi
+    Class: CS361
+    Project: 10
+    Date: December 19, 2016-->
+
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
@@ -9,7 +14,6 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-
 
 <TitledPane alignment="CENTER" text="LSystem Options" textAlignment="CENTER" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="proj9BeckChanceRemondiSalerno.Controllers.LSystemOptionsController">
